--- a/views/views.xml
+++ b/views/views.xml
@@ -1,60 +1,23 @@
 <odoo>
   <data>
     <!-- explicit list view definition -->
-    <!--
-    <record model="ir.ui.view" id="client_history_product.list">
-      <field name="name">client_history_product list</field>
-      <field name="model">client_history_product.client_history_product</field>
+    
+    <record model="ir.ui.view" id="client_history_product_list">
+      <field name="name">res.partner.inherit.history.product.form</field>
+      <field name="model">res.partner</field>
+      <field name="inherit_id" ref="base.view_partner_form"></field>
       <field name="arch" type="xml">
-        <tree>
-          <field name="name"/>
-          <field name="value"/>
-          <field name="value2"/>
-        </tree>
+        <xpath expr="//form[1]/sheet[1]/notebook[1]" position="inside">
+          <page name="history_product" string="Historique d'achats">
+            <field name="list_products">
+              <tree>
+                <field name="name"/>
+              </tree>
+            </field>
+          </page>
+        </xpath>
       </field>
     </record>
-    -->
-
-    <!-- actions opening views on models -->
-    <!--
-    <record model="ir.actions.act_window" id="client_history_product.action_window">
-      <field name="name">client_history_product window</field>
-      <field name="res_model">client_history_product.client_history_product</field>
-      <field name="view_mode">tree,form</field>
-    </record>
-    -->
-
-    <!-- server action to the one above -->
-    <!--
-    <record model="ir.actions.server" id="client_history_product.action_server">
-      <field name="name">client_history_product server</field>
-      <field name="model_id" ref="model_client_history_product_client_history_product"/>
-      <field name="state">code</field>
-      <field name="code">
-        action = {
-          "type": "ir.actions.act_window",
-          "view_mode": "tree,form",
-          "res_model": self._name,
-        }
-      </field>
-    </record>
-    -->
-
-    <!-- Top menu item -->
-    <!--
-    <menuitem name="client_history_product" id="client_history_product.menu_root"/>
-    -->
-    <!-- menu categories -->
-    <!--
-    <menuitem name="Menu 1" id="client_history_product.menu_1" parent="client_history_product.menu_root"/>
-    <menuitem name="Menu 2" id="client_history_product.menu_2" parent="client_history_product.menu_root"/>
-    -->
-    <!-- actions -->
-    <!--
-    <menuitem name="List" id="client_history_product.menu_1_list" parent="client_history_product.menu_1"
-              action="client_history_product.action_window"/>
-    <menuitem name="Server to list" id="client_history_product" parent="client_history_product.menu_2"
-              action="client_history_product.action_server"/>
-    -->
+   
   </data>
 </odoo>
