try to add date order

--- a/views/views.xml
+++ b/views/views.xml
@@ -1,7 +1,6 @@
 <odoo>
   <data>
     <!-- explicit list view definition -->
-    
     <record model="ir.ui.view" id="client_history_product_list">
       <field name="name">res.partner.inherit.history.product.form</field>
       <field name="model">res.partner</field>
@@ -9,6 +8,7 @@
       <field name="arch" type="xml">
         <xpath expr="//form[1]/sheet[1]/notebook[1]" position="inside">
           <page name="history_product" string="Historique d'achats">
+            <!-- <p>hello world</p> -->
             <field name="list_products">
               <tree>
                 <field name="name"/>
@@ -18,6 +18,5 @@
         </xpath>
       </field>
     </record>
-   
   </data>
 </odoo>
